src/parser/TSmmParser.java
// Generated from C:/Users/teres/IdeaProjects/DLP/src/parser/TSmm.g4 by ANTLR 4.13.2
package parser;

import ast.definitions.*;
import ast.expressions.*;
import ast.locatables.*;
import ast.statements.*;
import ast.types.*;
import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class TSmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, WHITES=40, COMMENT=41, INT_CONSTANT=42, CHAR_CONSTANT=43, REAL_CONSTANT=44, 
		ID=45;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_varDefinition = 2, RULE_variables = 3, 
		RULE_funcDefinition = 4, RULE_parameters = 5, RULE_functionInvocation = 6, 
		RULE_statementFunctionInvocation = 7, RULE_arguments = 8, RULE_statement = 9, 
		RULE_block = 10, RULE_expression = 11, RULE_simple_type = 12, RULE_type = 13, 
		RULE_mainDefinition = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "varDefinition", "variables", "funcDefinition", 
			"parameters", "functionInvocation", "statementFunctionInvocation", "arguments", 
			"statement", "block", "expression", "simple_type", "type", "mainDefinition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'let'", "':'", "';'", "','", "'function'", "'('", "')'", "'void'", 
			"'{'", "'}'", "'log'", "'input'", "'='", "'while'", "'if'", "'else'", 
			"'return'", "'['", "']'", "'.'", "'as'", "'-'", "'!'", "'*'", "'%'", 
			"'/'", "'+'", "'>'", "'>='", "'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", 
			"'char'", "'int'", "'number'", "'main'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "WHITES", "COMMENT", "INT_CONSTANT", "CHAR_CONSTANT", 
			"REAL_CONSTANT", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TSmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TSmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public Program p = new Program();
		public DefinitionContext definition;
		public MainDefinitionContext mainDefinition;
		public MainDefinitionContext mainDefinition() {
			return getRuleContext(MainDefinitionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(TSmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(30);
					((ProgramContext)_localctx).definition = definition();
					 _localctx.p.addDefinitions(((ProgramContext)_localctx).definition.ast); 
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(38);
			((ProgramContext)_localctx).mainDefinition = mainDefinition();
			_localctx.p.addDefinition(((ProgramContext)_localctx).mainDefinition.ast);
			setState(40);
			match(EOF);
			 ((ProgramContext)_localctx).ast =  _localctx.p; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public VarDefinitionContext varDefinition;
		public FuncDefinitionContext funcDefinition;
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public FuncDefinitionContext funcDefinition() {
			return getRuleContext(FuncDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(49);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(43);
				((DefinitionContext)_localctx).varDefinition = varDefinition();
				 _localctx.ast.addAll(((DefinitionContext)_localctx).varDefinition.ast); 
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(46);
				((DefinitionContext)_localctx).funcDefinition = funcDefinition();
				 _localctx.ast.add(((DefinitionContext)_localctx).funcDefinition.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public Token ID;
		public VariablesContext variables;
		public TypeContext t;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefinition; }
	}

	public final VarDefinitionContext varDefinition() throws RecognitionException {
		VarDefinitionContext _localctx = new VarDefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			match(T__0);
			setState(52);
			((VarDefinitionContext)_localctx).ID = match(ID);
			setState(53);
			((VarDefinitionContext)_localctx).variables = variables();
			setState(54);
			match(T__1);
			setState(55);
			((VarDefinitionContext)_localctx).t = type();
			setState(56);
			match(T__2);

			        _localctx.ast.add(new VarDefinition(((VarDefinitionContext)_localctx).ID.getLine(),((VarDefinitionContext)_localctx).ID.getCharPositionInLine()+1,((VarDefinitionContext)_localctx).t.ast, (((VarDefinitionContext)_localctx).ID!=null?((VarDefinitionContext)_localctx).ID.getText():null)));
			         for(Token id : ((VarDefinitionContext)_localctx).variables.ast) {
			               _localctx.ast.add(new VarDefinition(
			                           id.getLine(),
			                           id.getCharPositionInLine()+1,
			                           ((VarDefinitionContext)_localctx).t.ast,
			                           id.getText() ));}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesContext extends ParserRuleContext {
		public List<Token> ast = new ArrayList<>();
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(59);
				match(T__3);
				setState(60);
				((VariablesContext)_localctx).ID = match(ID);
				 _localctx.ast.add(((VariablesContext)_localctx).ID); 
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefinitionContext extends ParserRuleContext {
		public Definition ast;
		public Type returnType;
		public List<Definition> vars = new ArrayList<>();
		public List<Statement> stmts = new ArrayList<>();
		public List<Definition> params = new ArrayList<>();
		public Token ID;
		public ParametersContext parameters;
		public Simple_typeContext t;
		public VarDefinitionContext varDefinition;
		public StatementContext statement;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Simple_typeContext simple_type() {
			return getRuleContext(Simple_typeContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FuncDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDefinition; }
	}

	public final FuncDefinitionContext funcDefinition() throws RecognitionException {
		FuncDefinitionContext _localctx = new FuncDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__4);
			setState(68);
			((FuncDefinitionContext)_localctx).ID = match(ID);
			setState(69);
			match(T__5);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(70);
				((FuncDefinitionContext)_localctx).parameters = parameters();
				_localctx.params.addAll(((FuncDefinitionContext)_localctx).parameters.ast);
				}
			}

			setState(75);
			match(T__6);
			setState(76);
			match(T__1);
			setState(82);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__35:
			case T__36:
			case T__37:
				{
				setState(77);
				((FuncDefinitionContext)_localctx).t = simple_type();
				((FuncDefinitionContext)_localctx).returnType = ((FuncDefinitionContext)_localctx).t.ast;
				}
				break;
			case T__7:
				{
				setState(80);
				match(T__7);
				((FuncDefinitionContext)_localctx).returnType =  VoidType.getInstance();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(84);
			match(T__8);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(85);
				((FuncDefinitionContext)_localctx).varDefinition = varDefinition();
				_localctx.vars.addAll(((FuncDefinitionContext)_localctx).varDefinition.ast);
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 65970710435904L) != 0)) {
				{
				{
				setState(93);
				((FuncDefinitionContext)_localctx).statement = statement();
				_localctx.stmts.addAll(((FuncDefinitionContext)_localctx).statement.ast);
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			match(T__9);

			                        ((FuncDefinitionContext)_localctx).ast =  new FuncDefinition(
			                            ((FuncDefinitionContext)_localctx).ID.getLine(),
			                            ((FuncDefinitionContext)_localctx).ID.getCharPositionInLine()+1,
			                            new FunctionType(
			                                _localctx.returnType,
			                                _localctx.params
			                            ),
			                            (((FuncDefinitionContext)_localctx).ID!=null?((FuncDefinitionContext)_localctx).ID.getText():null),
			                            _localctx.vars,
			                            _localctx.stmts
			                        );
			                    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<>();
		public Token ID;
		public Simple_typeContext simple_type;
		public List<TerminalNode> ID() { return getTokens(TSmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(TSmmParser.ID, i);
		}
		public List<Simple_typeContext> simple_type() {
			return getRuleContexts(Simple_typeContext.class);
		}
		public Simple_typeContext simple_type(int i) {
			return getRuleContext(Simple_typeContext.class,i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			((ParametersContext)_localctx).ID = match(ID);
			setState(105);
			match(T__1);
			setState(106);
			((ParametersContext)_localctx).simple_type = simple_type();
			_localctx.ast.add(new VarDefinition(
			                 ((ParametersContext)_localctx).ID.getLine(),
			                 ((ParametersContext)_localctx).ID.getCharPositionInLine()+1,
			                 ((ParametersContext)_localctx).simple_type.ast,
			                 (((ParametersContext)_localctx).ID!=null?((ParametersContext)_localctx).ID.getText():null)
			                 ));
			            
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(108);
				match(T__3);
				setState(109);
				((ParametersContext)_localctx).ID = match(ID);
				setState(110);
				match(T__1);
				setState(111);
				((ParametersContext)_localctx).simple_type = simple_type();
				_localctx.ast.add(new VarDefinition(
				                  ((ParametersContext)_localctx).ID.getLine(),
				                  ((ParametersContext)_localctx).ID.getCharPositionInLine()+1,
				                  ((ParametersContext)_localctx).simple_type.ast,
				                  (((ParametersContext)_localctx).ID!=null?((ParametersContext)_localctx).ID.getText():null)
				                  ));
				            
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionInvocationContext extends ParserRuleContext {
		public Expression ast;
		public Token ID;
		public ArgumentsContext arguments;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public FunctionInvocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionInvocation; }
	}

	public final FunctionInvocationContext functionInvocation() throws RecognitionException {
		FunctionInvocationContext _localctx = new FunctionInvocationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionInvocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			((FunctionInvocationContext)_localctx).ID = match(ID);
			setState(120);
			match(T__5);
			setState(121);
			((FunctionInvocationContext)_localctx).arguments = arguments();
			setState(122);
			match(T__6);

			            ((FunctionInvocationContext)_localctx).ast =  new FunctionInvocation(
			                ((FunctionInvocationContext)_localctx).ID.getLine(),
			                ((FunctionInvocationContext)_localctx).ID.getCharPositionInLine()+1,
			                new Variable(
			                    ((FunctionInvocationContext)_localctx).ID.getLine(),
			                    ((FunctionInvocationContext)_localctx).ID.getCharPositionInLine()+1,
			                    (((FunctionInvocationContext)_localctx).ID!=null?((FunctionInvocationContext)_localctx).ID.getText():null)),
			                ((FunctionInvocationContext)_localctx).arguments.ast);
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementFunctionInvocationContext extends ParserRuleContext {
		public Statement ast;
		public Token ID;
		public ArgumentsContext arguments;
		public TerminalNode ID() { return getToken(TSmmParser.ID, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public StatementFunctionInvocationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statementFunctionInvocation; }
	}

	public final StatementFunctionInvocationContext statementFunctionInvocation() throws RecognitionException {
		StatementFunctionInvocationContext _localctx = new StatementFunctionInvocationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statementFunctionInvocation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			((StatementFunctionInvocationContext)_localctx).ID = match(ID);
			setState(126);
			match(T__5);
			setState(127);
			((StatementFunctionInvocationContext)_localctx).arguments = arguments();
			setState(128);
			match(T__6);

			                ((StatementFunctionInvocationContext)_localctx).ast =  new FunctionInvocation(
			                    ((StatementFunctionInvocationContext)_localctx).ID.getLine(),
			                    ((StatementFunctionInvocationContext)_localctx).ID.getCharPositionInLine()+1,
			                    new Variable(
			                        ((StatementFunctionInvocationContext)_localctx).ID.getLine(),
			                        ((StatementFunctionInvocationContext)_localctx).ID.getCharPositionInLine()+1,
			                        (((StatementFunctionInvocationContext)_localctx).ID!=null?((StatementFunctionInvocationContext)_localctx).ID.getText():null)),
			                    ((StatementFunctionInvocationContext)_localctx).arguments.ast
			                );
			            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArgumentsContext extends ParserRuleContext {
		public List<Expression> ast = new ArrayList<>();
		public ExpressionContext e1;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
	}
